--- a/3D tissue reconstruction.ipynb
+++ b/3D tissue reconstruction.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Ref\n",
+    "[OneDrive](https://outlookuga-my.sharepoint.com/:f:/g/personal/am87062_uga_edu/EnnzX3cNZLNJgVg640GX8M8B0vbWpCUADlaDPiQxGYHwFA?email=Daniil.Golubchikov%40uga.edu&e=5%3aDi9ERX&at=9)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -35,15 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "outputs": [
     {
-     "data": {
-      "text/plain": "['/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_98.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_72.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_99.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_75.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_74.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_89.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_76.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_77.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_88.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_91.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_85.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_84.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_90.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_86.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_79.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_78.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_87.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_83.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_97.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_96.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_82.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_94.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_80.tif',\n '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv/bv_81.tif']"
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'bv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[6], line 12\u001B[0m\n\u001B[1;32m      8\u001B[0m \t\u001B[38;5;28;01mreturn\u001B[39;00m file_path\n\u001B[1;32m     11\u001B[0m path \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mbv\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[0;32m---> 12\u001B[0m files \u001B[38;5;241m=\u001B[39m \u001B[43mget_path\u001B[49m\u001B[43m \u001B[49m\u001B[43m(\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mpath\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     13\u001B[0m files\n",
+      "Cell \u001B[0;32mIn[6], line 2\u001B[0m, in \u001B[0;36mget_path\u001B[0;34m(path)\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mget_path\u001B[39m (path: \u001B[38;5;28mstr\u001B[39m):\n\u001B[0;32m----> 2\u001B[0m \tfile_names \u001B[38;5;241m=\u001B[39m \u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlistdir\u001B[49m\u001B[43m \u001B[49m\u001B[43m(\u001B[49m\u001B[43mpath\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      3\u001B[0m \tfile_path \u001B[38;5;241m=\u001B[39m []\n\u001B[1;32m      5\u001B[0m \t\u001B[38;5;28;01mfor\u001B[39;00m file_name \u001B[38;5;129;01min\u001B[39;00m file_names:\n",
+      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'bv'"
+     ]
     }
    ],
    "source": [
@@ -100,6 +114,38 @@
    "source": [
     "plt.imshow (img, 'gray')"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'files' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[4], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m img \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mimread (\u001B[43mfiles\u001B[49m [\u001B[38;5;241m1\u001B[39m], \u001B[38;5;241m0\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'files' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "img = cv2.imread (files [1], 0)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
@@ -271,115 +317,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Opened folder:\n",
-      "/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv\n",
-      "There are 24 files in the folder\n",
-      "\n",
-      "IMAGE PROCESSING STAGE\n",
-      "\n",
-      "[INFO] File [1/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 127.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [2/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 125.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [3/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 128.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [4/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 127.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [5/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 128.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [6/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 126.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [7/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 131.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [8/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 127.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [9/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 126.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [10/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 126.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [11/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 129.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [12/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 126.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [13/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 127.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [14/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 129.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [15/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 127.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [16/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 127.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [17/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 95.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [18/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 130.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [19/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 125.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [20/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 128.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [21/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 128.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [22/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 126.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [23/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 128.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "[INFO] File [24/24] is processing\n",
-      "[INFO] Otsu's thresholding value: 125.0\n",
-      "[INFO] Otsu's thresholding completed\n",
-      "\n",
-      "PROCESSING COMPLETED\n"
+      "/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[7], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m STACK \u001B[38;5;241m=\u001B[39m \u001B[43mnk_module\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mprocess_files_in_folder\u001B[49m\u001B[43m \u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m      2\u001B[0m \u001B[43m\t\t\u001B[49m\u001B[43mfolder_path\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\n\u001B[1;32m      3\u001B[0m \u001B[43m\t\t\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/PycharmProjects/3D-tissue-reconstruction/image_stack_to_pcd.py:140\u001B[0m, in \u001B[0;36mprocess_files_in_folder\u001B[0;34m(folder_path)\u001B[0m\n\u001B[1;32m    115\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mprocess_files_in_folder\u001B[39m (\n\u001B[1;32m    116\u001B[0m         folder_path: \u001B[38;5;28mstr\u001B[39m\n\u001B[1;32m    117\u001B[0m         ):\n\u001B[1;32m    118\u001B[0m     \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    119\u001B[0m \u001B[38;5;124;03m       Process files within a specified folder.\u001B[39;00m\n\u001B[1;32m    120\u001B[0m \n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    138\u001B[0m \u001B[38;5;124;03m           - The function does not return any processed data or results.\u001B[39;00m\n\u001B[1;32m    139\u001B[0m \u001B[38;5;124;03m       \"\"\"\u001B[39;00m\n\u001B[0;32m--> 140\u001B[0m     files_path_list \u001B[38;5;241m=\u001B[39m \u001B[43mget_files_abs_paths\u001B[49m\u001B[43m \u001B[49m\u001B[43m(\u001B[49m\u001B[43mfolder_path\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mfolder_path\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    142\u001B[0m     \u001B[38;5;28mprint\u001B[39m (\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mIMAGE PROCESSING STAGE\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m    144\u001B[0m     stack_layers \u001B[38;5;241m=\u001B[39m {}\n",
+      "File \u001B[0;32m~/PycharmProjects/3D-tissue-reconstruction/image_stack_to_pcd.py:36\u001B[0m, in \u001B[0;36mget_files_abs_paths\u001B[0;34m(folder_path)\u001B[0m\n\u001B[1;32m     18\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m     19\u001B[0m \u001B[38;5;124;03m    Retrieve absolute paths of all files within a folder.\u001B[39;00m\n\u001B[1;32m     20\u001B[0m \n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     33\u001B[0m \u001B[38;5;124;03m        ['/path/to/folder/file1.txt', '/path/to/folder/file2.txt', '/path/to/folder/file3.txt']\u001B[39;00m\n\u001B[1;32m     34\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[1;32m     35\u001B[0m \u001B[38;5;28mprint\u001B[39m (\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mOpened folder:\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00mfolder_path\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 36\u001B[0m file_names \u001B[38;5;241m=\u001B[39m \u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlistdir\u001B[49m\u001B[43m \u001B[49m\u001B[43m(\u001B[49m\u001B[43mfolder_path\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     37\u001B[0m \u001B[38;5;28mprint\u001B[39m (\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mThere are \u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mlen\u001B[39m (file_names)\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m files in the folder\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     39\u001B[0m temp_list \u001B[38;5;241m=\u001B[39m []\n",
+      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: '/Users/minkota/Library/CloudStorage/OneDrive-UniversityofGeorgia/IRM/3D rec/bv'"
      ]
     }
    ],
